--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -1,4 +1,4 @@
-name: Python Package using Conda
+name: Python Unit Testing
 
 on: [push]
 
@@ -29,14 +29,13 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Load environment variables
+      - name: Test with pytest
         env:
           API_KEY: ${{secrets.API_KEY}}
           API_SECRET_KEY: ${{secrets.API_SECRET_KEY}}
           BEARER_TOKEN: ${{secrets.BEARER_TOKEN}}
           ACCESS_TOKEN: ${{secrets.ACCESS_TOKEN}}
           ACCESS_TOKEN_SECRET: ${{secrets.ACCESS_TOKEN_SECRET}}
-      - name: Test with pytest
         run: |
           conda install pytest
           pytest
