--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -3,11 +3,10 @@ name: Python Unit Testing
 on: [push]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
-
     steps:
       - name: Checkout source
         uses: actions/checkout@v2
@@ -15,16 +14,15 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Add conda to system path
+      - name: Create virtualenv
         run: |
-          # $CONDA is an environment variable pointing to the root of the miniconda directory
-          echo $CONDA/bin >> $GITHUB_PATH
+          python -m venv tweet-venv
       - name: Install dependencies
         run: |
-          conda env update --file environment.yml --name base
+          python -m pip install -r requirements.txt
       - name: Lint with flake8
         run: |
-          conda install flake8
+          python -m pip install flake8
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
@@ -37,5 +35,5 @@ jobs:
           ACCESS_TOKEN: ${{secrets.ACCESS_TOKEN}}
           ACCESS_TOKEN_SECRET: ${{secrets.ACCESS_TOKEN_SECRET}}
         run: |
-          conda install pytest
+          python -m pip install pytest
           pytest
