--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -3,7 +3,7 @@ name: Python Unit Testing
 on: [push]
 
 jobs:
-  test:
+  setup:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
@@ -20,6 +20,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
+      - name: Run setup script for develop
+        run: |
+          python setup.py develop
+  lint:
+    needs: setup
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 5
+    steps:
       - name: Lint with flake8
         run: |
           python -m pip install flake8
@@ -27,6 +36,12 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+  test:
+    needs: lint
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 5
+    steps:
       - name: Test with pytest
         env:
           API_KEY: ${{secrets.API_KEY}}
