--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -14,15 +14,22 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Create virtualenv
+      - name: Cache virtualenv
+        uses: actions/cache@v2
+        id: cache-venv
+        with:
+          path: ./tweet-venv/
+          key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-
+
+      - name: Create virtualenv and install dependencies
         run: |
-          python -m venv tweet-venv
-      - name: Install dependencies
-        run: |
-          python -m pip install -r requirements.txt
+          python -m venv tweet-venv && source ./tweet-venv/bin/activate && python -m pip install -r requirements.txt
+        if: steps.cache.cache-venv.outputs.cache-hit != 'true'
       - name: Run setup script for develop
         run: |
-          python setup.py develop
+          source ./tweet-venv/bin/activate && python setup.py develop
       - name: Test with pytest
         env:
           API_KEY: ${{secrets.API_KEY}}
@@ -31,5 +38,5 @@ jobs:
           ACCESS_TOKEN: ${{secrets.ACCESS_TOKEN}}
           ACCESS_TOKEN_SECRET: ${{secrets.ACCESS_TOKEN_SECRET}}
         run: |
-          python -m pip install pytest
+          source ./tweet-venv/bin/activate && python -m pip install pytest
           pytest
