--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,54 @@
+absl-py==0.12.0
+astunparse==1.6.3
+attrs==21.2.0
+cachetools==4.2.2
+certifi==2021.5.30
+chardet==4.0.0
+flatbuffers==1.12
+gast==0.3.3
+google-auth==1.30.2
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+grpcio==1.32.0
+h5py==2.10.0
+idna==2.10
+iniconfig==1.1.1
+joblib==1.0.1
+Keras-Preprocessing==1.1.2
+Markdown==3.3.4
 numpy==1.19.2
+oauthlib==3.1.1
+opt-einsum==3.3.0
+packaging==20.9
 pandas==1.2.4
-pip==21.1.2
+pluggy==0.13.1
+protobuf==3.17.3
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+PySocks==1.7.1
 pytest==6.2.4
+python-dateutil==2.8.1
 python-dotenv==0.17.1
+pytz==2021.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
 scikit-learn==0.24.2
-setuptools==49.6.0
+scipy==1.6.3
+six==1.15.0
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
 tensorflow==2.4.1
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+threadpoolctl==2.1.0
+toml==0.10.2
 tweepy==3.10.0
+-e git+git@github.com:nosaka0/twitter-analysis.git@eb74835e452c59bc5dc9c1c4d16f7f4454b1d413#egg=twitteranalysis
+typing-extensions==3.7.4.3
+urllib3==1.26.5
+Werkzeug==2.0.1
+wrapt==1.12.1
