--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
+coverage==5.5
 decorator==5.0.9
 defusedxml==0.7.1
 entrypoints==0.3
@@ -74,6 +75,7 @@ pyparsing==2.4.7
 pyrsistent==0.17.3
 PySocks==1.7.1
 pytest==6.2.4
+pytest-cov==2.12.1
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 pytz==2021.1
