--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -38,4 +38,11 @@ jobs:
           ACCESS_TOKEN: ${{secrets.ACCESS_TOKEN}}
           ACCESS_TOKEN_SECRET: ${{secrets.ACCESS_TOKEN_SECRET}}
         run: |
-          source ./tweet-venv/bin/activate && pytest
+          source ./tweet-venv/bin/activate && pytest   
+      - name: "Upload coverage to Codecov"
+        uses: codecov/codecov-action@v1
+        with:
+          fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
+          
+
