--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -44,5 +44,6 @@ jobs:
         with:
           fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
-          
+          files: ./coverage.xml
+
 
