--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -38,7 +38,7 @@ jobs:
           ACCESS_TOKEN: ${{secrets.ACCESS_TOKEN}}
           ACCESS_TOKEN_SECRET: ${{secrets.ACCESS_TOKEN_SECRET}}
         run: |
-          source ./tweet-venv/bin/activate && pytest   
+          source ./tweet-venv/bin/activate && pytest --cov=./ --cov-report=xml tests   
       - name: "Upload coverage to Codecov"
         uses: codecov/codecov-action@v1
         with:
